@@ -1,16 +1,20 @@
+# BEWARE: this makefile is solely used for preparing a release - it is not useful for compiling/installing the program
+
 # use something like "VERSION=0.2 make" to override the VERSION on the command line
-VERSION ?= svn
-SVN_BASE = https://pycam.svn.sourceforge.net/svnroot/pycam
-RELEASE_PREFIX = pycam-
+VERSION ?= $(shell sed -n "s/^.*[\t ]*version[\t ]*=[\t ]*[\"']\([^\"']*\)[\"'].*/\1/gp" setup.py)
+SVN_BASE ?= https://pycam.svn.sourceforge.net/svnroot/pycam
+RELEASE_PREFIX ?= pycam-
+ARCHIVE_DIR_RELATIVE ?= release-archives
 EXPORT_DIR = $(RELEASE_PREFIX)$(VERSION)
 EXPORT_FILE_PREFIX = $(EXPORT_DIR)
-EXPORT_ZIP = $(EXPORT_FILE_PREFIX).zip
-EXPORT_TGZ = $(EXPORT_FILE_PREFIX).tar.gz
-EXPORT_WIN32 = $(EXPORT_FILE_PREFIX).win32.exe
-EXPORT_ARCHIVE_DIR = $(EXPORT_DIR)/dist
+EXPORT_ZIP = $(ARCHIVE_DIR)/$(EXPORT_FILE_PREFIX).zip
+EXPORT_TGZ = $(ARCHIVE_DIR)/$(EXPORT_FILE_PREFIX).tar.gz
+EXPORT_WIN32 = $(ARCHIVE_DIR)/$(EXPORT_FILE_PREFIX).win32.exe
 
+# turn the destination directory into an absolute path
+ARCHIVE_DIR := $(shell pwd)/$(ARCHIVE_DIR_RELATIVE)
 
-.PHONY: zip tgz win32 clean dist svn_export tag
+.PHONY: zip tgz win32 clean dist svn_export upload create_archive_dir
 
 dist: zip tgz win32
 	@# remove the tmp directory when everything is done
@@ -22,17 +26,20 @@ clean:
 svn_export: clean
 	svn export --quiet "$(SVN_BASE)/trunk" "$(EXPORT_DIR)"
 
-zip: svn_export
-	python "$(EXPORT_DIR)/setup.py" sdist --format zip
+create_archive_dir:
+	mkdir -p "$(ARCHIVE_DIR)"
 
-tgz: svn_export
-	python "$(EXPORT_DIR)/setup.py" sdist --format gztar
+zip: create_archive_dir svn_export
+	cd "$(EXPORT_DIR)"; python setup.py sdist --format zip --dist-dir "$(ARCHIVE_DIR)"
 
-win32: svn_export
+tgz: create_archive_dir svn_export
+	cd "$(EXPORT_DIR)"; python setup.py sdist --format gztar --dist-dir "$(ARCHIVE_DIR)"
+
+win32: create_archive_dir svn_export
 	# this is a binary release
-	python "$(EXPORT_DIR)/setup.py" bdist --format wininst
+	cd "$(EXPORT_DIR)"; python setup.py bdist --format wininst --dist-dir "$(ARCHIVE_DIR)"
 
-tag:
+upload:
 	svn cp "$(SVN_BASE)/trunk" "$(SVN_BASE)/tags/release-$(VERSION)" -m "tag release $(VERSION)"
 	svn import "$(EXPORT_ZIP)" "$(SVN_BASE)/tags/archives/$(EXPORT_ZIP)" -m "added released zip file for version $(VERSION)"
 	svn import "$(EXPORT_TGZ)" "$(SVN_BASE)/tags/archives/$(EXPORT_TGZ)" -m "added released tgz file for version $(VERSION)"
